--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ruoyi</groupId>
-    <artifactId>ruoyipractice</artifactId>
+    <artifactId>ruoyi-practice</artifactId>
     <version>4.7.7</version>
 
     <name>ruoyi</name>
